# FitLog

./: .clang-format  .gitmodules  CMakeLists.txt  arch.puml
src/: body_value.hpp  bot.cpp  bot.hpp  commands.hpp  db.hpp  db_info.hpp  food_entry.hpp  info.hpp  main.cpp  render.cpp  render.hpp  token.hpp  user_context.hpp  user_info.hpp
src/commands/: add_body_stats.hpp  add_food_stats.hpp  start.cpp  start.hpp  stats_menu.hpp
